@@ -20,6 +20,7 @@
 11. If a 'Basic' mode connection fails, re-start spawned MPD instance (and
     remove any previous pid file).
 12. Fix Jamendo and Magnatune covers.
+13. Fix various issues with 'Personal' MPD instance.
 
 2.0.1
 -----
